# restart-safe-agents

./: LICENSE  Makefile  README.md  SECURITY.md  SUPPORT.md  pyproject.toml
demo/: README.md  demo.py
src/restart_safe_agents/: __init__.py  demo.py  exceptions.py  graph.py  state.py
src/restart_safe_agents/llm/: __init__.py  base.py  openai_compat.py
src/restart_safe_agents/nodes/: __init__.py  compact.py  deliver.py  execute.py  plan.py  review.py  triage.py
src/restart_safe_agents/safety/: __init__.py  review_limit.py  roi_gate.py
src/restart_safe_agents/sources/: __init__.py  base.py  redis_stream.py
tests/: test_compaction.py  test_nodes.py  test_redis_source.py  test_roi_gate.py  test_state.py
