[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "restart-safe-agents"
version = "0.1.0"
description = "Restart-safe AI agent workflows with checkpointed node execution."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
  "httpx>=0.27",
  "redis>=5.0",
]

[project.optional-dependencies]
dev = [
  "fakeredis>=2.23",
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
]

[tool.hatch.build.targets.wheel]
packages = ["src/restart_safe_agents"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
